--- a/Global_South_fall.Rmd
+++ b/Global_South_fall.Rmd
@@ -40,119 +40,94 @@ cnlp_init_spacy()
 
 # Setup
 
-Step 1 is to import the corpus and annotate the entire dataframe. Then I extract each the tokens dataframe and initialize the stopwords dictionary. Annotating the entire corpus is a deathwish at this point because it'll be super slow. I've chosen to reduce my corpus to being just from 1970 to 1979, at least at this early stage of the project. That gives me roughly 5 million words. 
+Step 1 is to import the corpus that I previouslly annotated of every UNGA speech. That was using corpusmaker.r. I store it on my desktop, and a version can also be found on UChicago box. 
 
-```{r cache=TRUE}
-# Load in the df of all the speeches by speech
-imported_files <- read_tsv(here::here("Data", "raw_speeches_mikhaylov_project.tsv"))
-
-# Annotate the structure of the 1970s decade speeches. 
-annotated_imported_files_1970 <- cnlp_annotate(imported_files %>% filter(Year %in% (1970:1979)), as_strings = TRUE)
-
-# Get the individual words for 1970s
-all_words_only_1970 <- cnlp_get_token(annotated_imported_files_1970) %>%
-  filter(!str_detect(word, "^[0-9]*$")) %>%
-  filter(!upos == "PUNCT" & !upos == "SPACE") %>%
-  mutate(lemma = strip(lemma)) %>%
-  # correcting lemma development to be develop
-  mutate(lemma = if_else(lemma == "development", "develop", lemma)) %>%
-  mutate(id = str_sub(id, end=-5)) %>%
-  separate(id, c("Country", "Session", "Year"), sep = "_", remove = FALSE)
-
-
-annotated_imported_files_2k <- cnlp_annotate(imported_files %>% filter(Year %in% (2000:2009)), as_strings = TRUE)
-
-all_words_only_2k <- cnlp_get_token(annotated_imported_files_2k) %>%
-  filter(!str_detect(word, "^[0-9]*$")) %>%
-  filter(!upos == "PUNCT" & !upos == "SPACE") %>%
-  mutate(lemma = strip(lemma)) %>%
-  #stemming development to distance_between_develop_other_words
-  mutate(lemma = if_else(lemma == "development", "develop", lemma))
-
-data(stop_words)
-```
-
-
-```{r}
+```{r cache = TRUE}
 annotated_imported_speeches <- read_tsv("../../../../../Desktop/full_un_corpus_annotated.tsv") %>%
   filter(!str_detect(word, "^[0-9]*$")) %>%
   filter(!upos == "PUNCT" & !upos == "SPACE") %>%
   mutate(lemma = strip(lemma)) %>%
-  # correcting lemma development to be develop
+  # correcting lemmas of some weird special cases. 
+  # One day I might wordStem the entire thing. 
   mutate(lemma = if_else(lemma == "development", "develop", lemma)) %>%
   mutate(lemma = if_else(lemma == "government", "govern", lemma)) %>%
   mutate(id = str_sub(id, end=-5)) %>%
   separate(id, c("Country", "Session", "Year"), sep = "_", remove = FALSE)
 all_words_only <- annotated_imported_speeches
 all_words_only_1970 <- all_words_only %>% filter(Year %in% (1970:1979))
-all_words_only_1980 <- all_words_only %>% filter(Year %in% (1980:1989))
-all_words_only_1990 <- all_words_only %>% filter(Year %in% (1990:1999))
 all_words_only_2k <- all_words_only %>% filter(Year %in% (2000:2009))
-all_words_only_2010 <- all_words_only %>% filter(Year %in% (2010:2018))
-
 ```
-
-To import the 1970 and all time stuff so i can skip annotation each time. 
-all_words_only_1970 <- read_tsv("../../../../../Desktop/all_words_only_1970.tsv")
-all_words_only <- read_tsv("../../../../../Desktop/full_un_corpus_annotated.tsv") %>% filter(!str_detect(word, "^[0-9]*$")) %>%
-  filter(!upos == "PUNCT" & !upos == "SPACE") %>%
-  mutate(lemma = strip(lemma)) %>%
-  # correcting lemma development to be develop
-  mutate(lemma = if_else(lemma == "development", "develop", lemma)) %>%
-  mutate(id = str_sub(id, end=-5)) %>%
-  separate(id, c("Country", "Session", "Year"), sep = "_", remove = FALSE)
-  
-  
-The words we are most interested at the moment are:
-
-* Govern-
-* Develop-
-* Secur-
-
-and any relevant derivatives of them. These are words that we'll tag the entire sentence of when they appear in a speech. 
 
 # Function to determine the distance between words
 
 This is a function that finds out the distance between two words in a string. It is my baby. It's important because my (read: Neeraj's possibly misinformed) hypothesis is that words relevant to a keyword will be said closer in a sentence to the keyword itself. At minimum, important words will be mentioned a lot. 
 
 ```{r}
-# Builds a function that counts how far apart two words are
-distance_between_words <- function(df_of_all_tokens, keyword) {
-  df <- df_of_all_tokens %>% 
-    filter(lemma == keyword) %>%
-    select(id, sid) %>%
-    mutate(sentence_number = row_number()) %>%
-    inner_join(df_of_all_tokens, by = NULL) %>%
-    select(id, sid, word, lemma, sentence_number)
-  
-  # number of sentences that say the keyword
-  x <- max(select(df, sentence_number))
-  
-  datalist = list()
-  for (i in 1:x) {
-      # isolates gets the ith sentence that mentions the keyword
-      limited_df <- filter(df, sentence_number == i)
-      
-      # Finds the location of the keyword in the sentence
-      location_of_keyword <- limited_df %>%
-          mutate(keyword_row_number = if_else(lemma == keyword, location <- as.double(row_number()), 0)) %>%
-          filter(lemma == keyword) %>%
-         select(sentence_number, keyword_row_number)
-      
-      final <- left_join(limited_df, location_of_keyword) %>%
-        mutate(transient_row_number = as.double(row_number())) %>%
-        mutate(length_of_sentence = max(transient_row_number)) %>%
-        mutate(distance_from_keyword = abs(keyword_row_number - transient_row_number)) %>%
-        mutate(distance_from_keyword_percent = distance_from_keyword/length_of_sentence)
-      
-      #appends all the ith sentences together into a large df
-      datalist[[i]] <- final
+# returns full tidytext df of sentences containing a specific keyword
+sentences_with_keyword <- function(df, keyword) {
+  returner <- df %>%
+    filter(lemma == keyword) %>% 
+    select(id, sid) %>% 
+    distinct() %>% 
+    left_join(df)
+  return(returner)
 }
-  export <- bind_rows(datalist)
 
+# This grabs the sentence in front of, the sentence itself, and the sentence behind the keyword. 
+local_sentences_with_keyword <- function(df, keyword) {
+  sentence_ids <- df %>%
+    filter(lemma == keyword) %>% 
+    select(id, sid) %>% 
+    distinct()
+  all_ids_sids <- all_words_only %>% 
+    select(id, sid) %>% 
+    distinct() 
+  #need to lag it to the sid before and lead it to the sid after. Can't just use +1 and -1 because of weirdness in how data got processed. 
+  before_middle_after_sentence_ids <- bind_rows(sentence_ids, sentence_ids %>% mutate(sid = sid - 1), sentence_ids %>% mutate(sid = sid + 1)) %>%
+    distinct() %>%
+    arrange(id, sid)
+  returner <- semi_join(df, before_middle_after_sentence_ids) %>%
+    arrange(id, sid)
+  return(returner)
+}
+
+# Builds a function that counts how far apart two words are.
+# the df will almost allways be all_words_only
+distance_between_words <- function(df, keyword) {
+  #begin Old sentences_with_keyword
+  # This grabs all sentences with the keyword. It produces duplicates if the keyword appears multiple times. Those are removed later on. 
+  df_of_location_sentences_with_keyword <- df %>% 
+    filter(lemma == keyword) %>% 
+    select(id, sid) %>% 
+    mutate(sentence_number = row_number()) %>%
+    unite(cat, c(id, sid), remove = FALSE) %>% 
+    mutate(is_duplicate = duplicated(cat)) %>% 
+    mutate(is_duplicate = if_else(is_duplicate == TRUE, TRUE, duplicated(cat, fromLast = TRUE)))
+  df_of_all_sentences_with_keyword <- inner_join(df, df_of_location_sentences_with_keyword) %>% select(id, sid, cat, tid, word, lemma, sentence_number, is_duplicate)
+  # Begin distance_between_words
+  sentences_containing_keyword <- df_of_all_sentences_with_keyword
+  
+  location_of_keywords_in_each_sentence <- sentences_containing_keyword %>%
+    mutate(keyword_row_number = if_else(lemma == keyword, location <- tid, 0)) %>%
+    filter(lemma == keyword) %>%
+    select(sentence_number, keyword_row_number)
+  export <- inner_join(sentences_containing_keyword, location_of_keywords_in_each_sentence, by = ("sentence_number")) %>%
+    unite(cat, c(cat, tid), remove = FALSE) %>%
+    mutate(distance_between_word_and_keyword = abs(keyword_row_number - tid)) %>%
+    mutate(compare_value = if_else(is_duplicate, lead(distance_between_word_and_keyword), 0)) %>%
+    distinct(cat, .keep_all = TRUE) %>%
+    mutate(distance_between_word_and_keyword = if_else(is_duplicate, pmin(distance_between_word_and_keyword, compare_value), distance_between_word_and_keyword))
   return(export)
 }
 ```
+
+When we first started out in the Fall, we thought that the words we were most interested in were:
+
+* Govern-
+* Develop-
+* Secur-
+
+and any relevant derivatives of them. Those are words that I tagged when they appeared in a speech. I need to update the next three sections of code to reflect the current function that gets distances between words and abilities to do the entire timespan of the corpus; not just 1970 to 1979. 
 
 # Mentions of Govern with related words form the 1970 to 1979 corpus
 
@@ -169,7 +144,7 @@ distance_between_govern_other_words <- distance_between_words(all_words_only_197
 ggplot(distance_between_govern_other_words, mapping = aes(`count`, `mean(distance_from_keyword_percent)`)) +
   geom_point() +
   labs(x = "Number of Mentions of Word", y = "Average Distance from Keyword", title = "Relative distance from relative keyword (Govern) versus mentions")
-  # related words: scatter plot with count of total times said on x axis and distance from govern on y axis
+# related words: scatter plot with count of total times said on x axis and distance from govern on y axis
 
 # for some reason, the sentence division within the annotated_imported_files object is empty so cnlp_get_sentences returns an empty dataframe. What do I need to configure differently to get a) sentences to be parsed by the cnlp_annotate function up here and b) extract actual sentences and any information at that level.
 
@@ -209,7 +184,7 @@ distance_between_develop_other_words <- distance_between_words(all_words_only_19
   arrange(-count) %>%
   filter(lemma != "develop")
 
-       fggplot(distance_between_develop_other_words, mapping = aes(`count`, `mean(distance_from_keyword_percent)`)) +
+fggplot(distance_between_develop_other_words, mapping = aes(`count`, `mean(distance_from_keyword_percent)`)) +
   geom_point() +
   labs(x = "Number of Mentions of Word", y = "Average Distance from Keyword", title = "Relative distance from relative keyword (Develop) versus mentions")
 
@@ -255,7 +230,10 @@ ggplot(distance_between_develop_other_words_2k %>% filter(lemma != "country"), m
 kable(distance_between_develop_other_words_2k %>% slice(1:15))
 ```
 
+
 # TFIDF
+
+The most recent breakthrough has been on TFIDF. 
 
 ```{r}
 #List of countries for filtering
@@ -266,30 +244,52 @@ country_filter <- str_to_lower(pull(codelist, country.name.en))
 #all_words_only <- all_words_only %>%
 #  mutate(word_stem = wordStem(lemma))
 
-# Function that gets the top tfidf words for each year in a decade. This is applied to a dataframe that already has done tfidf analyis on a bunch of words. 
-tfidf_keyword_decades <- function(df_of_tfidf_of_every_individual_word, decade) {
+# Takes in a df of the words that appear in a sentence containing a keyword and returns a df of words that appear within a certain range of years. 
+# Common ranges of years: a decade, each year, five years. 
+# Example question this function answers: What were the most important words to govern in a 5 year period?
+tfidfer <- function(df, start_year, up_to) {
+  tfidf_over_range <- df %>%
+    filter(Year %in% seq(start_year, start_year + up_to)) %>%
+    bind_tf_idf(lemma, id, n) %>%
+    filter(lemma %in% country_filter == FALSE) %>%
+    anti_join(stop_words, by = c("lemma" = "word"))
+  return(tfidf_over_range)
+}
+
+# Function that gets the top tfidf words in each year. This is applied to a dataframe that already has done tfidf analyis on a bunch of words related to a keyword over a period of time.
+# The keyword technically does not matter for this function. 
+tfidf_aux_word_organizer <- function(df_of_tfidf_of_every_individual_word) {
   df_of_tfidf_of_every_individual_word <- df_of_tfidf_of_every_individual_word %>% 
-  separate(id, c("Country", "Session", "Year")) %>%
-  filter(Year %in% seq(decade, decade+9)) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10) 
+    separate(id, c("Country", "Session", "Year")) %>%
+    group_by(Year, lemma) %>%
+    summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
+    filter(n >= 5) %>%
+    ungroup() %>%
+    mutate(ratio = mean_tfidf/n) %>%
+    arrange(desc(ratio)) %>%
+    filter(lemma != "develop" 
+           & lemma != "pron" 
+           & lemma != "people" 
+           & lemma != ""
+           & lemma != "country"
+           & lemma != "countries"
+           & lemma != ""
+           & lemma != "united"
+           & lemma != "nation"
+           & lemma != "nations"
+           & lemma != "international"
+           & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10) 
   return(df_of_tfidf_of_every_individual_word)
+}
+
+printer_producer <- function(dataframe) {
+  dataframe <- dataframe %>% 
+    arrange(-desc(Year))
+  data <- list()
+  for (i in seq(as.double(min(dataframe$Year)), as.double(max(dataframe$Year)))) {
+    data <- bind_cols(data, dataframe %>% filter(Year == i) %>% add_column(NA))
+  }
+  return(data)
 }
 ```
 
@@ -307,346 +307,82 @@ full_tfidf <- seperate_tfidf %>%
 full_tfidf
 ```
 
-TFIDF for stuff related to govern
+TFIDF for stuff related to govern. 
 
 ```{r}
-sentences_mention_govern <- distance_between_words(all_words_only, "govern")
-num_words_in_each_speech_mentioning_govern <- sentences_mention_govern %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n))
+# note that this produces an unstemmed all_words_only. 
+sentences_mention_govern <- sentences_with_keyword(all_words_only, "govern")
+num_words_in_each_speech_mentioning_govern <- sentences_mention_govern %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>%
+  summarize(`words in speech` = sum(n))
 
-mentions_of_aux_words_in_sentences_containing_govern <- 
+mentions_of_aux_words_in_sentences_containing_govern <- left_join(sentences_mention_govern %>% count(id, lemma), num_words_in_each_speech_mentioning_govern) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+# tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 1970, 9) %>% select(-Year, -Session, -Country) is equal to govern_full_tfidf_1970_ided
+# furthermore, all of the govern_xxxxs equals the previous govern_full_tfidf_xxxx_yeared I previously had. Thus, it is the proper implimentation. 
+govern_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 1970, 9) %>% select(-Year, -Session, -Country))
+govern_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 1980, 9) %>% select(-Year, -Session, -Country))
+govern_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 1990, 9) %>% select(-Year, -Session, -Country))
+govern_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 2000, 9) %>% select(-Year, -Session, -Country))
+govern_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 2010, 9) %>% select(-Year, -Session, -Country))
 ```
 
 ```{r}
-#these are unstemmed
-sentences_mention_govern_1970 <- distance_between_words(all_words_only_1970, "govern")
-sentences_mention_govern_1980 <- distance_between_words(all_words_only_1980, "govern")
-sentences_mention_govern_1990 <- distance_between_words(all_words_only_1990, "govern")
-sentences_mention_govern_2k <- distance_between_words(all_words_only_2k, "govern")
-sentences_mention_govern_2010 <- distance_between_words(all_words_only_2010, "govern")
-
-
-govern_1970_seperate_tfidf <- left_join(sentences_mention_govern_1970 %>% count(id, lemma), sentences_mention_govern_1970 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-govern_1980_seperate_tfidf <- left_join(sentences_mention_govern_1980 %>% count(id, lemma), sentences_mention_govern_1980 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-govern_1990_seperate_tfidf <- left_join(sentences_mention_govern_1990 %>% count(id, lemma), sentences_mention_govern_1990 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-govern_2k_seperate_tfidf <- left_join(sentences_mention_govern_2k %>% count(id, lemma), sentences_mention_govern_2k %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-govern_2010_seperate_tfidf <- left_join(sentences_mention_govern_2010 %>% count(id, lemma), sentences_mention_govern_2010 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-
-govern_full_tfidf_1970_ided <- govern_1970_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-govern_full_tfidf_1980_ided <- govern_1980_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-govern_full_tfidf_1990_ided <- govern_1990_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-govern_full_tfidf_2k_ided <- govern_2k_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-govern_full_tfidf_2010_ided <- govern_2010_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-
-govern_full_tfidf_1970_yeared <- govern_full_tfidf_1970_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "govern" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-govern_full_tfidf_1980_yeared <- govern_full_tfidf_1980_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "govern" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-govern_full_tfidf_1990_yeared <- govern_full_tfidf_1990_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "govern" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-govern_full_tfidf_2k_yeared <- govern_full_tfidf_2k_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "govern" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-govern_full_tfidf_2010_yeared <- govern_full_tfidf_2010_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "govern" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10) 
-
-govern_full_tfidf_1970_yeared
-govern_full_tfidf_1980_yeared
-govern_full_tfidf_1990_yeared
-govern_full_tfidf_2k_yeared
-govern_full_tfidf_2010_yeared
+local_sentences_mention_govern <- local_sentences_with_keyword(all_words_only, "govern")
 ```
 
-Develop
+TFIDF for stuff related to Develop
 
 ```{r}
-sentences_mention_develop_1970 <- distance_between_words(all_words_only_1970, "develop")
-sentences_mention_develop_1980 <- distance_between_words(all_words_only_1980, "develop")
-sentences_mention_develop_1990 <- distance_between_words(all_words_only_1990, "develop")
-sentences_mention_develop_2k <- distance_between_words(all_words_only_2k, "develop")
-sentences_mention_develop_2010 <- distance_between_words(all_words_only_2010, "develop")
+# note that this produces an unstemmed all_words_only. 
+sentences_mention_develop <- sentences_with_keyword(all_words_only, "develop")
+num_words_in_each_speech_mentioning_develop <- sentences_mention_develop %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>% 
+  summarize(`words in speech` = sum(n))
 
+mentions_of_aux_words_in_sentences_containing_develop <- left_join(sentences_mention_develop %>% count(id, lemma), num_words_in_each_speech_mentioning_develop) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
 
-develop_1970_seperate_tfidf <- left_join(sentences_mention_develop_1970 %>% count(id, lemma), sentences_mention_develop_1970 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-develop_1980_seperate_tfidf <- left_join(sentences_mention_develop_1980 %>% count(id, lemma), sentences_mention_develop_1980 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-develop_1990_seperate_tfidf <- left_join(sentences_mention_develop_1990 %>% count(id, lemma), sentences_mention_develop_1990 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-develop_2k_seperate_tfidf <- left_join(sentences_mention_develop_2k %>% count(id, lemma), sentences_mention_develop_2k %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-develop_2010_seperate_tfidf <- left_join(sentences_mention_develop_2010 %>% count(id, lemma), sentences_mention_develop_2010 %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-
-develop_full_tfidf_1970_ided <- develop_1970_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-develop_full_tfidf_1980_ided <- develop_1980_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-develop_full_tfidf_1990_ided <- develop_1990_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-develop_full_tfidf_2k_ided <- develop_2k_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-develop_full_tfidf_2010_ided <- develop_2010_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-
-develop_full_tfidf_1970_yeared <- develop_full_tfidf_1970_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-develop_full_tfidf_1980_yeared <- develop_full_tfidf_1980_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-develop_full_tfidf_1990_yeared <- develop_full_tfidf_1990_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-develop_full_tfidf_2k_yeared <- develop_full_tfidf_2k_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10)
-
-develop_full_tfidf_2010_yeared <- develop_full_tfidf_2010_ided %>%
-  separate(id, c("Country", "Session", "Year")) %>%
-  group_by(Year, lemma) %>%
-  summarize(mean_tfidf = mean(tf_idf), n = n()) %>%
-  filter(n >= 5) %>%
-  ungroup() %>%
-  mutate(ratio = mean_tfidf/n) %>%
-  arrange(desc(ratio)) %>%
-  filter(lemma != "develop" 
-         & lemma != "pron" 
-         & lemma != "people" 
-         & lemma != ""
-         & lemma != "country"
-         & lemma != "countries"
-         & lemma != ""
-         & lemma != "united"
-         & lemma != "nation"
-         & lemma != "nations"
-         & lemma != "international"
-         & lemma != "'s") %>% group_by(Year) %>% top_n(n = 10) 
-
-develop_full_tfidf_1970_yeared
-develop_full_tfidf_1980_yeared
-develop_full_tfidf_1990_yeared
-develop_full_tfidf_2k_yeared
-develop_full_tfidf_2010_yeared
-
-# develop_full_tfidf_1970_yeared %>%
-#  arrange(-desc(Year))
+develop_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 1970, 9) %>% select(-Year, -Session, -Country))
+develop_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 1980, 9) %>% select(-Year, -Session, -Country))
+develop_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 1990, 9) %>% select(-Year, -Session, -Country))
+develop_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 2000, 9) %>% select(-Year, -Session, -Country))
+develop_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 2010, 9) %>% select(-Year, -Session, -Country))
 ```
 
+TFIDF for stuff related to Rights
+
 ```{r}
-sentences_mention_rights <- distance_between_words(all_words_only, "right")
+# "rights" gets lemma'ed to "right"
+# "Rights" gets lemma'ed to "rights." I do some overriding to get them to be the same in this context.
+sentences_mention_right <- sentences_with_keyword(all_words_only %>% mutate(lemma = if_else(lemma == "rights", "right", lemma)), "right")
+num_words_in_each_speech_mentioning_right <- sentences_mention_right %>%  
+  count(id, lemma) %>% 
+  group_by(id) %>% 
+  summarize(`words in speech` = sum(n))
 
-right_all_seperate_tfidf <- left_join(sentences_mention_rights %>% count(id, lemma), sentences_mention_rights %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
+mentions_of_aux_words_in_sentences_containing_right <- left_join(sentences_mention_right %>% count(id, lemma), num_words_in_each_speech_mentioning_right) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
 
-right_full_tfidf_all_ided <- right_all_seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  anti_join(stop_words, by = c("lemma" = "word"))
-
-
+right_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 1970, 9) %>% select(-Year, -Session, -Country))
+right_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 1980, 9) %>% select(-Year, -Session, -Country))
+right_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 1990, 9) %>% select(-Year, -Session, -Country))
+right_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 2000, 9) %>% select(-Year, -Session, -Country))
+right_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 2010, 9) %>% select(-Year, -Session, -Country))
 ```
 
 
-```{r}
 rerun the big chunk above for rights and capibailities
-adjust the words from funciton to look at sentence before and after
+adjust the words from funciton to look at sentence before and after especially for govern_1970s
 
-
-```
+TO DO TOMORROW
+apply before and after sentences and see what emerges for govern especially
+do capibalities to get a vocab cluster
+do rights to find out specifically what rights
+do part of speech tagging. 
 
 
 Do this but only for nouns. + verbs + adjs in 1970 and 2000s. Do it for these three words for a total of 18 tables. 1970s and 2000s, nouns verbs adjs for * Govern-
